--- a/react-front/src/index.css
+++ b/react-front/src/index.css
@@ -40,3 +40,19 @@ body {
 .table tr:hover {
   background-color: #f1f1f1;
 }
+
+.table td input {
+  width: 50%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.table td select {
+  width: 50%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
