--- a/react-front/src/index.css
+++ b/react-front/src/index.css
@@ -7,6 +7,29 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.heading-block {
+  display: flex;
+  flex-grow: 1;
+  align-items: center;
+  margin: 1rem;
+}
+
+.error {
+  color: red;
+  font-size: 0.8rem;
+}
+
+.heading-text {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.target-text {
+  font-size: 1.2rem;
+  font-weight: 500;
+  margin-left: 10px;
+}
+
 .dashboard {
   display: flex;
   gap: 5rem;
