--- a/react-front/src/components/RowItem.module.css
+++ b/react-front/src/components/RowItem.module.css
@@ -19,6 +19,13 @@
     color: black;
 }
 
+.smallText {
+    font-size: 12px;
+    color: #888;
+    margin-top: -20px;
+    margin-bottom: 0px;
+}
+
 .editButton,
 .saveButton,
 .cancelButton,
